--- a/package.json
+++ b/package.json
@@ -3,20 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^13.0.16",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.36",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "typescript": "^4.2.3"
+    "@types/node": "^16.10.3",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
