--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
