--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-scripts": "5.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.10",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "typescript": "^4.5.2"
+    "@types/jest": "27.4.0",
+    "@types/node": "16.11.21",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "typescript": "4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
   "volta": {
-    "node": "14.16.0",
-    "npm": "7.6.3"
+    "node": "16.13.2",
+    "npm": "8.3.1"
   }
 }
