--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@types/jest": "27.5.0",
+    "@types/jest": "^27.5.1",
     "@types/node": "16.11.21",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
-    "typescript": "4.6.4"
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "typescript": "^4.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
   "volta": {
-    "node": "16.14.2",
-    "npm": "8.6.0"
+    "node": "16.15.0",
+    "npm": "8.11.0"
   }
 }
